--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Francisco Ardévol Martínez</h1>
 						<p>PhD candidate at the University of Groningen<br />
-						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
+						</p>
 					</header>
 
 				<!-- Nav -->
@@ -122,12 +122,11 @@
 								</footer>
 							</section>
 
-						<!-- Get Started -->
+						<!-- Contact -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Get in touch</h2>
+									<p>email: ardevol@astro.rug.nl</p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
