--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
 							<h2>Etiam feugiat</h2>
 							<dl class="alt">
 								<dt>Address</dt>
-								<dd>Kapteyn Institute; Landleven 12 &bull; 9747AD Groningen</dd>
+								<dd>Kapteyn Institute &bul; Landleven 12 &bull; 9747AD Groningen &bull; The Netherlands</dd>
 								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
+								<dd>+31 50 36 34073</dd>
 								<dt>Email</dt>
 								<dd>ardevol@astro.rug.nl</dd>
 							</dl>
