--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 							<h2>Etiam feugiat</h2>
 							<dl class="alt">
 								<dt>Address</dt>
-								<dd>Kapteyn Institute &bul; Landleven 12 &bull; 9747AD Groningen &bull; The Netherlands</dd>
+								<dd>Kapteyn Institute &bull; Landleven 12 &bull; 9747AD Groningen &bull; The Netherlands</dd>
 								<dt>Phone</dt>
 								<dd>+31 50 36 34073</dd>
 								<dt>Email</dt>
