--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#first">CV</a></li>
+							<li><a href="#second">Teaching</a></li>
+							<li><a href="#cta">Contact</a></li>
 						</ul>
 					</nav>
 
@@ -56,26 +56,26 @@
 								</div>
 							</section>
 
-						<!-- First Section -->
+						<!-- CV -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>CV</h2>
 								</header>
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>2013-2017</h3>
+										<p>BSc Physics, Universidad Complutense de Madrid</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>2017-2019</h3>
+										<p>MSc Astrophysics, Copenhagen University</p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>2020-2024 (expected)</h3>
+										<p>PhD candidate, University of Groningen, University of Edimburgh</p>
 									</li>
 								</ul>
 								<footer class="major">
@@ -85,12 +85,11 @@
 								</footer>
 							</section>
 
-						<!-- Second Section -->
+						<!-- Teaching -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Teaching</h2>
+									<p>2020-2021, TA for the course 'Statistical Signal Processing'.</p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
@@ -165,7 +164,6 @@
 								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
 							</ul>
 						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
