--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Stellar by HTML5 UP</title>
+		<title>Francisco Ardévol Martínez</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -147,7 +147,7 @@
 							</ul>
 						</section>
 						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>Contact details</h2>
 							<dl class="alt">
 								<dt>Address</dt>
 								<dd>Kapteyn Institute &bull; Landleven 12 &bull; 9747AD Groningen &bull; The Netherlands</dd>
