--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Introduction</a></li>
+							<li><a href="#intro" class="active">About</a></li>
 							<li><a href="#first">CV</a></li>
 							<li><a href="#second">Teaching</a></li>
 							<li><a href="#cta">Contact</a></li>
@@ -43,13 +43,11 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Ipsum sed adipiscing</h2>
+											<h2>About me</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>I'm a joint PhD at the universities of Groningen and Edinburgh.</p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+											<li><a href="https://chameleon.wp.st-andrews.ac.uk/" class="button">CHAMELEON</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
@@ -75,7 +73,7 @@
 									<li>
 										<span class="icon major style5 fa-gem"></span>
 										<h3>2020-2024 (expected)</h3>
-										<p>PhD candidate, University of Groningen, University of Edimburgh</p>
+										<p>PhD candidate, University of Groningen, University of Edinburgh</p>
 									</li>
 								</ul>
 								<footer class="major">
