--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 											<li><a href="https://chameleon.wp.st-andrews.ac.uk/" class="button">CHAMELEON</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image"><img src="images/me.jpg" alt="" /></span>
 								</div>
 							</section>
 
