--- a/index.html
+++ b/index.html
@@ -45,10 +45,7 @@
 										<header class="major">
 											<h2>About me</h2>
 										</header>
-										<p>I'm a joint PhD at the universities of Groningen and Edinburgh.</p>
-										<ul class="actions">
-											<li><a href="https://chameleon.wp.st-andrews.ac.uk/" class="button">CHAMELEON</a></li>
-										</ul>
+										<p>I'm a joint PhD at the universities of Groningen and Edinburgh, as part of the Marie Curie ITN <a href="https://chameleon.wp.st-andrews.ac.uk/" class="button">CHAMELEON</a>.</p>
 									</div>
 									<span class="image"><img src="images/me.jpg" alt="" /></span>
 								</div>
