--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 										<p>I'm a joint PhD at the universities of Groningen and Edinburgh, as part of the Marie Curie ITN <a href="https://chameleon.wp.st-andrews.ac.uk/" class="button">CHAMELEON</a>.</p>
 									</div>
 									<span class="image"><img src="images/me.jpg" alt="" /></span>
+									<span class="image"><img src="images/chamelon-logo-200.jpg" alt="" /></span>
 								</div>
 							</section>
 
