--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 										<header class="major">
 											<h2>About me</h2>
 										</header>
-										<p>I'm a joint PhD at the universities of Groningen and Edinburgh, as part of the Marie Curie ITN <a href="https://chameleon.wp.st-andrews.ac.uk/" class="button">CHAMELEON</a>.</p>
+										<p>I'm a joint PhD at the universities of Groningen and Edinburgh, as part of the Marie Curie ITN <a href="https://chameleon.wp.st-andrews.ac.uk/">CHAMELEON</a>.</p>
 										<p> I will be working on using machine learning to perform atmospheric retrievals of exoplanets. Forward models complex enough to extract all the information present in future JWST spectra are computationally intensive, and training a neural network with such models will allow us to perform retrievals within minutes.</p>
 									</div>
 									<span class="image"><img src="images/me.jpg" alt="" /></span>
