--- a/index.html
+++ b/index.html
@@ -58,21 +58,9 @@
 									<h2>CV</h2>
 								</header>
 								<ul class="features">
-									<li>
-										<span class="icon solid major style1 fa-code"></span>
-										<h3>2013-2017</h3>
-										<p>BSc Physics, Universidad Complutense de Madrid</p>
-									</li>
-									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>2017-2019</h3>
-										<p>MSc Astrophysics, Copenhagen University</p>
-									</li>
-									<li>
-										<span class="icon major style5 fa-gem"></span>
-										<h3>2020-2024 (expected)</h3>
-										<p>PhD candidate, University of Groningen, University of Edinburgh</p>
-									</li>
+									<li>2013-2017 &bull; BSc Physics, Universidad Complutense de Madrid.</li>
+									<li>2017-2019 &bull; MSc Astrophysics, Copenhagen University</li>
+									<li>2020-2024 (expected) &bull; PhD candidate, University of Groningen, University of Edinburgh</li>
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
