--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
 								<header class="major">
 									<h2>Get in touch</h2>
 									<p>email: ardevol@astro.rug.nl</p>
+									<dt>Address</dt>
+								<dd>Kapteyn Institute &bull; Landleven 12 &bull; 9747AD Groningen &bull; The Netherlands</dd>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
