--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 									<h2>CV</h2>
 								</header>
 								<ul class="features">
-									<li>2013-2017 &bull; BSc Physics, Universidad Complutense de Madrid.</li>
-									<li>2017-2019 &bull; MSc Astrophysics, Copenhagen University</li>
-									<li>2020-2024 (expected) &bull; PhD candidate, University of Groningen, University of Edinburgh</li>
+									<p><li>2013-2017 &bull; BSc Physics, Universidad Complutense de Madrid.</li></p>
+									<p><li>2017-2019 &bull; MSc Astrophysics, Copenhagen University</li></p>
+									<p><li>2020-2024 (expected) &bull; PhD candidate, University of Groningen, University of Edinburgh</li></p>
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
@@ -109,9 +109,14 @@
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Get in touch</h2>
-									<p>email: ardevol@astro.rug.nl</p>
-									<dt>Address</dt>
-								<dd>Kapteyn Institute &bull; Landleven 12 &bull; 9747AD Groningen &bull; The Netherlands</dd>
+										<dl class="alt">
+											<dt>Address</dt>
+											<dd>Kapteyn Institute &bull; Landleven 12 &bull; 9747AD Groningen &bull; The Netherlands</dd>
+											<dt>Phone</dt>
+											<dd>+31 50 36 34073</dd>
+											<dt>Email</dt>
+											<dd>ardevol@astro.rug.nl</dd>
+										</dl>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
