--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Get in touch</h2>
-										<dl class="alt" align="center">
-											<dt>Address yo</dt>
+										<dl class="alt">
+											<dt align="center">Address</dt>
 											<dd>Kapteyn Institute &bull; Landleven 12 &bull; 9747AD Groningen &bull; The Netherlands</dd>
 											<dt>Phone</dt>
 											<dd>+31 50 36 34073</dd>
