--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
 											<dt>Email</dt>
 											<dd>ardevol@astro.rug.nl</dd>
 										</dl>
+										<ul class="icons">
+											<li><a href="https://twitter.com/franciscoarmar" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
+										</ul>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
@@ -149,10 +152,6 @@
 							</dl>
 							<ul class="icons">
 								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
 							</ul>
 						</section>
 					</footer>
