--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
 						</section>
 						<section>
 							<h2>Contact details</h2>
-							<dl class="alt">
-								<dt>Address</dt>
-								<dd>Kapteyn Institute &bull; Landleven 12 &bull; 9747AD Groningen &bull; The Netherlands</dd>
-								<dt>Phone</dt>
-								<dd>+31 50 36 34073</dd>
-								<dt>Email</dt>
-								<dd>ardevol@astro.rug.nl</dd>
-							</dl>
+                                <dl class="alt" align="center">
+                                    <dt>Address</dt>
+                                    <dd>Kapteyn Institute &bull; Landleven 12 &bull; 9747AD Groningen &bull; The Netherlands</dd>
+                                    <dt>Phone</dt>
+                                    <dd>+31 50 36 34073</dd>
+                                    <dt>Email</dt>
+                                    <dd>ardevol@astro.rug.nl</dd>
+                                </dl>
 							<ul class="icons">
 								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
 							</ul>
