--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 									<h2>CV</h2>
 								</header>
 								<ul class="features">
-									<p><li>2013-2017 &bull; BSc Physics, Universidad Complutense de Madrid.</li></p>
-									<p><li>2017-2019 &bull; MSc Astrophysics, Copenhagen University</li></p>
-									<p><li>2020-2024 (expected) &bull; PhD candidate, University of Groningen, University of Edinburgh</li></p>
+									<p align="center"><li>2013-2017 &bull; BSc Physics, Universidad Complutense de Madrid.</li></p>
+									<p align="centre"><li>2017-2019 &bull; MSc Astrophysics, Copenhagen University</li></p>
+									<p align="centre"><li>2020-2024 (expected) &bull; PhD candidate, University of Groningen, University of Edinburgh</li></p>
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
