--- a/index.html
+++ b/index.html
@@ -57,11 +57,14 @@
 								<header class="major">
 									<h2>CV</h2>
 								</header>
-								<ul class="features">
-									<p align="center"><li>2013-2017 &bull; BSc Physics, Universidad Complutense de Madrid.</li></p>
-									<p align="centre"><li>2017-2019 &bull; MSc Astrophysics, Copenhagen University</li></p>
-									<p align="centre"><li>2020-2024 (expected) &bull; PhD candidate, University of Groningen, University of Edinburgh</li></p>
-								</ul>
+									<dl class="alt">
+											<dt>2013 - 2017</dt>
+											<dd>BSc in Physics, Universidad Complutense de Madrid &bull; Madrid, Spain</dd>
+											<dt>2017 - 2019</dt>
+											<dd>MSc in Astrophysics, University of Copenhagen &bull; Copenhagen, Denmark</dd>
+											<dt>2020 - 2024 (expected)</dt>
+											<dd>PhD in Astrophysics, universities of Groningen and Edinburgh &bull; Groningen, The Netherlands and Edinburgh, Scotland</dd>
+								    </dl>
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
