--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 								</header>
 									<dl class="alt">
 											<dt>2013 - 2017</dt>
-											<dd>BSc in Physics, Universidad Complutense de Madrid &bull; Madrid, Spain</dd>
+											<dd>BSc in Physics, Universidad Complutense de Madrid</dd>
 											<dt>2017 - 2019</dt>
-											<dd>MSc in Astrophysics, University of Copenhagen &bull; Copenhagen, Denmark</dd>
+											<dd>MSc in Astrophysics, University of Copenhagen</dd>
 											<dt>2020 - 2024 (expected)</dt>
-											<dd>PhD in Astrophysics, universities of Groningen and Edinburgh &bull; Groningen, The Netherlands and Edinburgh, Scotland</dd>
+											<dd>PhD in Astrophysics, University of Groningen</dd>
 								    </dl>
 								<footer class="major">
 									<ul class="actions special">
