--- a/index.html
+++ b/index.html
@@ -57,23 +57,7 @@
 								<header class="major">
 									<h2>CV</h2>
 								</header>
-                                    dt {
-                                      float: left;
-                                      width: 30%;
-                                      /* adjust the width; make sure the total of both is 100% */
-                                      background: #cc0;
-                                      padding: 0;
-                                      margin: 0
-                                    }
-                                    dd {
-                                      float: left;
-                                      width: t0%;
-                                      /* adjust the width; make sure the total of both is 100% */
-                                      background: #dd0
-                                      padding: 0;
-                                      margin: 0
-                                    }
-									<dl class="alt">
+									<dl class="horizontal">
 											<dt>2013 - 2017</dt>
 											<dd>BSc in Physics, Universidad Complutense de Madrid</dd>
 											<dt>2017 - 2019</dt>
