--- a/index.html
+++ b/index.html
@@ -57,14 +57,13 @@
 								<header class="major">
 									<h2>CV</h2>
 								</header>
-									<dl class="horizontal">
-											<dt>2013 - 2017</dt>
-											<dd>BSc in Physics, Universidad Complutense de Madrid</dd>
-											<dt>2017 - 2019</dt>
-											<dd>MSc in Astrophysics, University of Copenhagen</dd>
-											<dt>2020 - 2024 (expected)</dt>
-											<dd>PhD in Astrophysics, University of Groningen</dd>
-								    </dl>
+									<table>
+                                        <tr>
+                                            <td>2013 - 2017</td>
+                                            <td>BSc in Physics, Universidad Complutense de Madrid</td>
+                                        </tr>
+                                        <tr>
+                                            
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
