--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
                                             <td>BSc in Physics, Universidad Complutense de Madrid</td>
                                         </tr>
                                         <tr>
-                                            
+                                            <td>2017 - 2019</td>
+                                            <td>MSc in Astrophysics, University of Copenhagen</td>
+                                        </tr>
+                                </table>
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
