--- a/index.html
+++ b/index.html
@@ -59,12 +59,16 @@
 								</header>
 									<table>
                                         <tr>
-                                            <td>2013 - 2017</td>
+                                            <td><b>2013 - 2017</b></td>
                                             <td>BSc in Physics, Universidad Complutense de Madrid</td>
                                         </tr>
                                         <tr>
-                                            <td>2017 - 2019</td>
+                                            <td><b>2017 - 2019</b></td>
                                             <td>MSc in Astrophysics, University of Copenhagen</td>
+                                        </tr>
+                                        <tr>
+                                            <td><b>2020 - 2024 (expected)</b></td>
+                                            <td>PhD in Astrophysics, University of Groningen</td>
                                         </tr>
                                 </table>
 								<footer class="major">
