--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 										<p>I'm a joint PhD at the universities of Groningen and Edinburgh, as part of the Marie Curie ITN <a href="https://chameleon.wp.st-andrews.ac.uk/">CHAMELEON</a>.</p>
 										<p> I will be working on using machine learning to perform atmospheric retrievals of exoplanets. Forward models complex enough to extract all the information present in future JWST spectra are computationally intensive, and training a neural network with such models will allow us to perform retrievals within minutes.</p>
 									</div>
-									<span class="image"><img src="images/me.jpg" alt="" /></span>
+									<span class="image"><img src="images/me.jpg" alt="Francisco Ardevol Martinez" /></span>
 								</div>
 							</section>
 
@@ -71,47 +71,19 @@
                                             <td>PhD in Astrophysics, University of Groningen</td>
                                         </tr>
                                 </table>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
 							</section>
 
 						<!-- Teaching -->
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Teaching</h2>
-									<p>2020-2021, TA for the course 'Statistical Signal Processing'.</p>
+									<table>
+                                        <tr>
+                                            <td><b>2020 - 2021</b></td>
+                                            <td>TA for <a href="https://www.rug.nl/ocasys/rug/vak/show?code=WMAS011-05">'Statistical Signal Processing'</a></td>
+                                        </tr>
+                                    </table>
 								</header>
-								<ul class="statistics">
-									<li class="style1">
-										<span class="icon solid fa-code-branch"></span>
-										<strong>5,120</strong> Etiam
-									</li>
-									<li class="style2">
-										<span class="icon fa-folder-open"></span>
-										<strong>8,192</strong> Magna
-									</li>
-									<li class="style3">
-										<span class="icon solid fa-signal"></span>
-										<strong>2,048</strong> Tempus
-									</li>
-									<li class="style4">
-										<span class="icon solid fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
-									</li>
-									<li class="style5">
-										<span class="icon fa-gem"></span>
-										<strong>1,024</strong> Nullam
-									</li>
-								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
 							</section>
 
 						<!-- Contact -->
@@ -142,27 +114,9 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
-						</section>
-						<section>
-							<h2>Contact details</h2>
-                                <dl class="alt" align="center">
-                                    <dt>Address</dt>
-                                    <dd>Kapteyn Institute &bull; Landleven 12 &bull; 9747AD Groningen &bull; The Netherlands</dd>
-                                    <dt>Phone</dt>
-                                    <dd>+31 50 36 34073</dd>
-                                    <dt>Email</dt>
-                                    <dd>ardevol@astro.rug.nl</dd>
-                                </dl>
-							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-							</ul>
-						</section>
+						<img src="images/chameleon-logo-200.jpg" alt="CHAMELEON" style="scale=0.1;"/>
+                        <img src="images/eu-flag-300.jpg" alt="EU" style="width:500px;height:600px;"/>
+                        <img src="images/marie-curie-logo-329.png" alt="MC ITN" style="width:500px;height:600px;"/>
 					</footer>
 
 			</div>
