--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Francisco Ardévol Martínez</h1>
 						<p>PhD candidate at the University of Groningen<br />
 						</p>
@@ -57,32 +56,24 @@
 								<header class="major">
 									<h2>CV</h2>
 								</header>
-									<table>
-                                        <tr>
-                                            <td><b>2013 - 2017</b></td>
-                                            <td>BSc in Physics, Universidad Complutense de Madrid</td>
-                                        </tr>
-                                        <tr>
-                                            <td><b>2017 - 2019</b></td>
-                                            <td>MSc in Astrophysics, University of Copenhagen</td>
-                                        </tr>
-                                        <tr>
-                                            <td><b>2020 - 2024 (expected)</b></td>
-                                            <td>PhD in Astrophysics, University of Groningen</td>
-                                        </tr>
-                                </table>
+                                <dl class="alt" align="justify">
+											<dt align="center">2013 - 2017</dt>
+											<dd align="left">BSc in Physics, Universidad Complutense de Madrid</dd>
+											<dt>2017 - 2019</dt>
+											<dd align="left">MSc in Astrophysics, University of Copenhagen</dd>
+											<dt>2020 - 2024 (expected)</dt>
+											<dd>PhD in Astrophysics, University of Groningen</dd>
+										</dl>
 							</section>
 
 						<!-- Teaching -->
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Teaching</h2>
-									<table>
-                                        <tr>
-                                            <td><b>2020 - 2021</b></td>
-                                            <td>TA for <a href="https://www.rug.nl/ocasys/rug/vak/show?code=WMAS011-05">'Statistical Signal Processing'</a></td>
-                                        </tr>
-                                    </table>
+                                    <dl class="alt" align="justify">
+											<dt>2020 - 2021</dt>
+											<dd align="left">Teaching assistant for <a href="https://www.rug.nl/ocasys/rug/vak/show?code=WMAS011-05">'Statistical Signal Processing'</a></dd>
+										</dl>
 								</header>
 							</section>
 
@@ -90,33 +81,44 @@
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Get in touch</h2>
-										<dl class="alt">
+										<dl class="alt" align="justify">
 											<dt align="center">Address</dt>
-											<dd>Kapteyn Institute &bull; Landleven 12 &bull; 9747AD Groningen &bull; The Netherlands</dd>
+											<dd align="left">Kapteyn Institute &bull; Landleven 12  &bull; 9747AD Groningen &bull; The Netherlands</dd>
 											<dt>Phone</dt>
-											<dd>+31 50 36 34073</dd>
+											<dd align="left">+31 50 36 34073</dd>
 											<dt>Email</dt>
 											<dd>ardevol@astro.rug.nl</dd>
 										</dl>
-										<ul class="icons">
+										<ul class="icons" align="right">
 											<li><a href="https://twitter.com/franciscoarmar" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
 										</ul>
 								</header>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
 							</section>
 
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<img src="images/chameleon-logo-200.jpg" alt="CHAMELEON" style="scale=0.1;"/>
-                        <img src="images/eu-flag-300.jpg" alt="EU" style="width:500px;height:600px;"/>
-                        <img src="images/marie-curie-logo-329.png" alt="MC ITN" style="width:500px;height:600px;"/>
+                        <div style="height:100vh;width:87vw" id="banner">
+                            <div class="inline-block">
+                                <img style="width:100%;height: 100%;" src ="images/rugr_logonlv_rood_rgb.jpg">
+                            </div>
+
+                            <div class="inline-block">
+                                <img style="width: 100%; height: 100%;" src ="images/avatar-roundel-blackonwhite.png">
+                            </div>
+                            <div class="inline-block">
+                                <img style="width: 100%; height: 100%;" src ="images/chameleon-logo-200.jpg">
+                            </div>
+                            <div class="inline-block">
+                                <img style="width: 100%; height: 100%;" src ="images/eu-flag-300.jpg">
+                            </div>
+                            <div class="inline-block">
+                                <img style="width: 100%; height: 100%;" src ="images/marie-curie-logo-329.png">
+                            </div>
+                        </div>
+                            
+                            
 					</footer>
 
 			</div>
