--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 											<dt>2017 - 2019</dt>
 											<dd align="left">MSc in Astrophysics, University of Copenhagen</dd>
 											<dt>2020 - 2024 (expected)</dt>
-											<dd>PhD in Astrophysics, University of Groningen</dd>
+											<dd>PhD in Astrophysics, University of Groningen & University of Edinburgh</dd>
 										</dl>
 							</section>
 
@@ -71,7 +71,7 @@
 								<header class="major">
 									<h2>Teaching</h2>
                                     <dl class="alt" align="justify">
-											<dt>2020 - 2021</dt>
+											<dt>2020 - 2022</dt>
 											<dd align="left">Teaching assistant for <a href="https://www.rug.nl/ocasys/rug/vak/show?code=WMAS011-05">'Statistical Signal Processing'</a></dd>
 										</dl>
 								</header>
